[package]
name = "rs-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
smallvec = "1.11.2"
tokio = { version = "1.35.1", features = ["full"] }
tokio-stream = "0.1.14"
futures = "0.3.30"
reqwest = "0.11.23"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
log = "0.4.20"
tokio-cron-scheduler = "0.9.4"

[[example]]
name = "condvar"

[workspace]
members = ["mandelbrot", "unsafe-tree", "wake-tree"]

[workspace.dependencies]
