[package]
name = "rs-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
smallvec = "1.13.2"
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = "0.1.15"
futures = "0.3.30"
reqwest = "0.11.27"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
log = "0.4.21"
tokio-cron-scheduler = "0.9.4"
serde = { version = "1.0.197", features = ["derive", "serde_derive"] }
serde_json = "1.0.115"
rand = "0.8.5"

[[example]]
name = "condvar"

[workspace]
members = ["mandelbrot", "timed-future", "unsafe-tree", "wake-tree"]

[workspace.dependencies]
